--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_deploy:
 deploy:
   - provider: releases
     overwrite: true
+    github-token: $GITHUB_TOKEN
     token:
       secure: fHybcH65ZdS5ITVKH2tIVBITVSiRQJ1AuWqLP16gyAz5pdmWbLM5gA/74zCozanRmuB+7pGFbhDNm075JWoEDVrWSFDLnNiXvfgUYa4oVEiWZlLvOfSARaU3AQPlVvFVhIbG9SA5IEwTtNFbyHjqLjGn/DSBpiIDqqxhF57vw7Q=
     file: dist/*
@@ -41,6 +42,7 @@ deploy:
     draft: true
     tag_name: "$TRAVIS_TAG"
     on:
+      branch: main
       repo: bkimminich/juice-shop
       tags: true
     edge: true
