--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ deploy:
     tag_name: "$TRAVIS_TAG"
     on:
       branch: main
-      repo: bkimminich/juice-shop
+      repo: germanAOQ/juice-shop
       tags: true
     edge: true
 jobs:
@@ -115,7 +115,7 @@ jobs:
         - npm start &
         - "../../test/smoke/smoke-test.sh http://localhost:3000"
     - stage: deploy
-      if: "(branch = master OR branch = develop OR branch = main) AND NOT type =
+      if: "(branch = main OR branch = develop) AND NOT type =
       pull_request"
       install: skip
       script: skip
@@ -127,57 +127,57 @@ jobs:
           api_key:
             secure: faVT3Ne/O7lVo0+pTm6RcXss0ivvSoODaxMkiVwdpk/51/EsRd4+/Gjmp3RGPmW5H5luOephsI8uFMMhgKiu5i3NV58ZSx29Z0aby+bfIhesZGZqJQvxeW8B0J8vlQFnEHP6xc6SAlXSdNjNpDeBaV7WSFSGKGp4Nh5QyO2ySLI=
           app:
-            master: juice-shop
+            main: juice-shop
             develop: juice-shop-staging
           on:
-            repo: bkimminich/juice-shop
+            repo: germanAOQ/juice-shop
           edge: true
     - stage: docker
       arch: amd64
       env:
         - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
-      if: "((branch = master OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
+      if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
       install:
-        - if [[ "$TRAVIS_BRANCH" == "master" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:latest-amd64 .; fi
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:snapshot-amd64 .; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:$TRAVIS_TAG-amd64 .; fi
+        - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:latest-amd64 .; fi
+        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:snapshot-amd64 .; fi
+        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:$TRAVIS_TAG-amd64 .; fi
       script:
         - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' docker-compose.test.yml; fi
         - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' docker-compose.test.yml; fi
         - docker-compose -f docker-compose.test.yml up --no-recreate --exit-code-from sut
       after_success:
-        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u bkimminich --password-stdin
-        - if [[ "$TRAVIS_BRANCH" == "master" ]]; then docker push bkimminich/juice-shop:latest-amd64; fi
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push bkimminich/juice-shop:snapshot-amd64; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push bkimminich/juice-shop:$TRAVIS_TAG-amd64; fi
+        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
+        - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker push germanAOQ/juice-shop:latest-amd64; fi
+        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push germanAOQ/juice-shop:snapshot-amd64; fi
+        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push germanAOQ/juice-shop:$TRAVIS_TAG-amd64; fi
     # - stage: docker
     #   arch: arm64
     #   env:
     #     - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
-    #   if: "((branch = master OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
+    #   if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
     #   install:
-    #     - if [[ "$TRAVIS_BRANCH" == "master" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:latest-arm64v8 .; fi
-    #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:snapshot-arm64v8 .; fi
-    #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t bkimminich/juice-shop:$TRAVIS_TAG-arm64v8 .; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:latest-arm64v8 .; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:snapshot-arm64v8 .; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/juice-shop:$TRAVIS_TAG-arm64v8 .; fi
     #   script:
-    #     - if [[ "$TRAVIS_BRANCH" == "master" ]]; then sed -i 's/amd64/arm64v8/g' docker-compose.test.yml; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "main" ]]; then sed -i 's/amd64/arm64v8/g' docker-compose.test.yml; fi
     #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest-amd64/snapshot-arm64v8/g' docker-compose.test.yml; fi
     #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest-amd64/'"$TRAVIS_TAG"'-arm64v8/g' docker-compose.test.yml; fi
     #     - docker-compose -f docker-compose.test.yml up --no-recreate --exit-code-from sut
     #   after_success:
-    #     - echo "$DOCKER_ACCESS_TOKEN" | docker login -u bkimminich --password-stdin
-    #     - if [[ "$TRAVIS_BRANCH" == "master" ]]; then docker push bkimminich/juice-shop:latest-arm64v8; fi
-    #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push bkimminich/juice-shop:snapshot-arm64v8; fi
-    #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push bkimminich/juice-shop:$TRAVIS_TAG-arm64v8; fi
+    #     - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
+    #     - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker push germanAOQ/juice-shop:latest-arm64v8; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push germanAOQ/juice-shop:snapshot-arm64v8; fi
+    #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push germanAOQ/juice-shop:$TRAVIS_TAG-arm64v8; fi
     - stage: manifest
       env:
         - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
-      if: "((branch = master OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
+      if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
       install:
         - curl -Lo manifest-tool https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64
         - chmod +x manifest-tool
       script:
-        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u bkimminich --password-stdin
+        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
         - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' multi-arch-manifest.yaml; fi
         - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' multi-arch-manifest.yaml; fi
         - "./manifest-tool push from-spec multi-arch-manifest.yaml"
