--- a/.travis.yml
+++ b/.travis.yml
@@ -130,26 +130,26 @@ jobs:
             main: juice-shop
             develop: juice-shop-staging
           on:
-            repo: germanAOQ/juice-shop
+            repo: bkimminich/juice-shop
           edge: true
-    - stage: docker
-      arch: amd64
-      env:
-        - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
-      if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
-      install:
-        - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:latest-amd64 .; fi
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:snapshot-amd64 .; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:$TRAVIS_TAG-amd64 .; fi
-      script:
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' docker-compose.test.yml; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' docker-compose.test.yml; fi
-        - docker-compose -f docker-compose.test.yml up --no-recreate --exit-code-from sut
-      after_success:
-        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
-        - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker push germanAOQ/Seminario-de-seguridad:latest-amd64; fi
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push germanAOQ/Seminario-de-seguridad:snapshot-amd64; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push germanAOQ/Seminario-de-seguridad:$TRAVIS_TAG-amd64; fi
+    # - stage: docker
+    #   arch: amd64
+    #   env:
+    #     - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
+    #   if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
+    #  install:
+    #    - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:latest-amd64 .; fi
+    #    - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:snapshot-amd64 .; fi
+    #    - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker build --build-arg VCS_REF=`git rev-parse --short HEAD` --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` -t germanAOQ/Seminario-de-seguridad:$TRAVIS_TAG-amd64 .; fi
+    #  script:
+    #    - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' docker-compose.test.yml; fi
+    #    - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' docker-compose.test.yml; fi
+    #    - docker-compose -f docker-compose.test.yml up --no-recreate --exit-code-from sut
+    #  after_success:
+    #    - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
+    #    - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker push germanAOQ/Seminario-de-seguridad:latest-amd64; fi
+    #    - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push germanAOQ/Seminario-de-seguridad:snapshot-amd64; fi
+    #    - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push germanAOQ/Seminario-de-seguridad:$TRAVIS_TAG-amd64; fi
     # - stage: docker
     #   arch: arm64
     #   env:
