--- a/.travis.yml
+++ b/.travis.yml
@@ -169,18 +169,18 @@ jobs:
     #     - if [[ "$TRAVIS_BRANCH" == "main" ]]; then docker push germanAOQ/juice-shop:latest-arm64v8; fi
     #     - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then docker push germanAOQ/juice-shop:snapshot-arm64v8; fi
     #     - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then docker push germanAOQ/juice-shop:$TRAVIS_TAG-arm64v8; fi
-    - stage: manifest
-      env:
-        - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
-      if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
-      install:
-        - curl -Lo manifest-tool https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64
-        - chmod +x manifest-tool
-      script:
-        - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
-        - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' multi-arch-manifest.yaml; fi
-        - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' multi-arch-manifest.yaml; fi
-        - "./manifest-tool push from-spec multi-arch-manifest.yaml"
+    # - stage: manifest
+    # env:
+    #    - secure: Tyoy/YPivlB0aVnkkBRa2BRshwhdPqC6TY+OE5u6fLHD/AconqyonKhFYSRDiYH8l5+bTbuPhWZ5NJATUm4k4mCTp9bIAQLrfGe5ws7rSGPBh4ohOItPXahNAUdTRhwJlOnzNkmTVdONhhCLhMceTlVNbU0c9rSTdRZF6LVN1Hk=
+    #  if: "((branch = main OR branch = develop) AND NOT type = pull_request) OR tag IS NOT blank"
+    #  install:
+    #    - curl -Lo manifest-tool https://github.com/estesp/manifest-tool/releases/download/v1.0.2/manifest-tool-linux-amd64
+    #    - chmod +x manifest-tool
+    #  script:
+    #    - echo "$DOCKER_ACCESS_TOKEN" | docker login -u germanAOQ --password-stdin
+    #   - if [[ "$TRAVIS_BRANCH" == "develop" ]]; then sed -i 's/latest/snapshot/g' multi-arch-manifest.yaml; fi
+    #   - if [[ "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]]; then sed -i 's/latest/'"$TRAVIS_TAG"'/g' multi-arch-manifest.yaml; fi
+    #  - "./manifest-tool push from-spec multi-arch-manifest.yaml"
 notifications:
   webhooks:
     urls:
