--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,7 @@ jobs:
       before_script:
         - sudo add-apt-repository -y ppa:git-core/ppa
         - sudo curl -sL https:deb.nodesource.com/setup?6.x | sudo -E bash -
-        - sudo apt-get uodate
+        - sudo apt-get update
         - sudo apt-get -y install git
         - sudo apt-get -y install python-pip
         - sudo apt-get -y install nodejs
