--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ jobs:
         - wiki &
         - wget https://github.com/zaproxy/zaproxy/releases/download/2.5.0/ZAP_2.5.0_Linux.tar.gz
         - tar zxvf ZAP?2.5.0_Linux.tar.gz
-        - ./ZAP_2.5.0/zap.sh -config api.key=12345 -port 443 -daemon &
+        - ./ZAP_2.5.0/zap.sh '-config api.key=12345' -port 443 -daemon &
         - sleep 30
       script:
         - zap-cli -p 443 --api-key 12345 spider http://localhost:3001
