--- a/.travis.yml
+++ b/.travis.yml
@@ -90,27 +90,27 @@ jobs:
         - "./cc-test-reporter sum-coverage build/reports/coverage/codeclimate.*.json -p
       3"
         - "./cc-test-reporter upload-coverage"
-    - stage: OWASPZAP
-      before_script:
-        - sudo add-apt-repository -y ppa:git-core/ppa
-        - sudo curl -sL https:deb.nodesource.com/setup?6.x | sudo -E bash -
-        - sudo apt-get update
-        - sudo apt-get -y install git
-        - sudo apt-get -y install python-pip
-        - sudo apt-get -y install nodejs
-        - sudo apt-get -y install lynx
-        - sudo pip install --upgrade git+https://github.com/Grunny/zap-cli.git
-        - npm install -g wiki
-        - wiki &
-        - wget https://github.com/zaproxy/zaproxy/releases/download/2.5.0/ZAP_2.5.0_Linux.tar.gz
-        - tar zxvf ZAP?2.5.0_Linux.tar.gz
-        - ./ZAP_2.5.0/zap.sh -config api.key=12345 -port 443 -daemon &
-        - sleep 30
-      script:
-        - zap-cli -p 443 --api-key 12345 spider http://127.0.0.1/
-        - zap-cli -p 443 --api-key 12345 active-scan http://127.0.0.1/
-        - sudo zap-cli -p 443 --api-key 12345 report -f html -o ./report.html
-        - lynx ./report.html -dump
+    #- stage: OWASPZAP
+     # before_script:
+      #  - sudo add-apt-repository -y ppa:git-core/ppa
+       # - sudo curl -sL https:deb.nodesource.com/setup?6.x | sudo -E bash -
+        #- sudo apt-get update
+        #- sudo apt-get -y install git
+        #- sudo apt-get -y install python-pip
+        #- sudo apt-get -y install nodejs
+        #- sudo apt-get -y install lynx
+        #- sudo pip install --upgrade git+https://github.com/Grunny/zap-cli.git
+        #- npm install -g wiki
+        #- wiki &
+        #- wget https://github.com/zaproxy/zaproxy/releases/download/2.5.0/ZAP_2.5.0_Linux.tar.gz
+        #- tar zxvf ZAP?2.5.0_Linux.tar.gz
+        #- ./ZAP_2.5.0/zap.sh -config api.key=12345 -port 443 -daemon &
+        #- sleep 30
+      #script:
+       # - zap-cli -p 443 --api-key 12345 spider http://127.0.0.1/
+       # - zap-cli -p 443 --api-key 12345 active-scan http://127.0.0.1/
+       # - sudo zap-cli -p 443 --api-key 12345 report -f html -o ./report.html
+       # - lynx ./report.html -dump
     - stage: e2e
       if: tag IS blank
       script:
