--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -21,10 +21,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
       - run: sudo apt-get -y install nodejs 
-      - run: sudo git clone https://github.com/germanAOQ/Seminario-de-seguridad.git
-      - run: cd juice-shop
-      - run: npm install
-      - run: npm start
+      - run: sudo git clone https://github.com/germanAOQ/Seminario-de-seguridad.git;
+             cd juice-shop;
+             npm install;
+             npm start;
         
       - name: OWASP ZAP Baseline Scan
   # You may pin to the exact commit or the version.
