--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -25,7 +25,7 @@ jobs:
       - run: cd Seminario-de-seguridad
       - run: ls Seminario-de-seguridad
       - run: npm install
-      - run: npm cache verify
+      - run: npm cache clean
       - run: npm start
         
       - name: OWASP ZAP Baseline Scan
