--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -24,6 +24,7 @@ jobs:
       - run: sudo git clone https://github.com/germanAOQ/Seminario-de-seguridad.git
       - run: cd Seminario-de-seguridad
       - run: ls Seminario-de-seguridad
+      - run: npm init
       - run: npm install
       - run: npm start
         
