--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -22,12 +22,8 @@ jobs:
     steps:      
       - run: sudo apt-get -y install nodejs 
       - run: sudo git clone https://github.com/germanAOQ/Seminario-de-seguridad.git
-      - run: cd Seminario-de-seguridad
-      - run: cd Seminario-de-seguridad
-      - run: ls
-      - run: npm init
-      - run: npm install
-      - run: npm start
+      - run: npm install Seminario-de-seguridad 
+      - run: npm start Seminario-de-seguridad
         
       - name: OWASP ZAP Baseline Scan
   # You may pin to the exact commit or the version.
