--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -20,10 +20,10 @@ jobs:
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
-      - run: sudo aptitude install nodejs-legacy
+      - run: sudo apt-get install nodejs
       - run: sudo git clone https://github.com/germanAOQ/Seminario-de-seguridad.git
-      - run: npm install Seminario-de-seguridad 
-      - run: npm start Seminario-de-seguridad
+      - run: sudo npm install Seminario-de-seguridad 
+      - run: sudo npm start Seminario-de-seguridad
         
       - name: OWASP ZAP Baseline Scan
   # You may pin to the exact commit or the version.
