--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -20,10 +20,10 @@ jobs:
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
-      - name: OWASP ZAP Baseline Scan
+      - name: OWASP ZAP Scan
   # You may pin to the exact commit or the version.
   # uses: zaproxy/action-baseline@acd8e997263688cb49cb5ff8247a4b2758c548ab
-        uses: zaproxy/action-baseline@v0.4.0
+        uses: zaproxy/action-full-scan@v0.2.0
         with:
     # GitHub Token to create issues in the repository
     # Target URL
