--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -33,5 +33,7 @@ jobs:
       - name: jq
         run: sudo apt-get install jq
       - name: comando
-        run: jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json
+        run: jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
+      - name: lectura
+        run: if grep -q true "$/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then break fi
  
