--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -35,5 +35,8 @@ jobs:
       - name: comando
         run: jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
       - name: lectura
-        run: if grep -q true "$/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then break fi
+        run: |
+              if grep -q true "$/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
+                echo mal
+              fi
  
