--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -30,12 +30,10 @@ jobs:
           target: https://preview.owasp-juice.shop
       - name: prueba
         run: ls /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad
-      - name: jq
-        run: sudo apt-get install jq
       - name: comando-y-lectura
         run: |
               jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
-              if grep -q true "$/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
+              if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
                 echo mal
               fi
  
