--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -37,9 +37,8 @@ jobs:
                 echo mal
               fi
       - name: deploy        
-        uses: | 
-              akhileshns/heroku-deploy@v3.6.8 # This is the action
-              actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+      - uses: actions/checkout@v2
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: seminario-seguridad #Must be unique in Heroku
