--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -36,11 +36,12 @@ jobs:
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
                 echo mal
               fi
-      - name: deploy        
-      - uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: seminario-seguridad #Must be unique in Heroku
-          heroku_email: german.ospina-q@mail.escuelaing.edu.co
+      
+      #- name: deploy        
+      #  uses: akhileshns/heroku-deploy@v3.6.8 # This is the action
+      #  with:
+      #    heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      #    heroku_app_name: seminario-seguridad #Must be unique in Heroku
+      #    heroku_email: german.ospina-q@mail.escuelaing.edu.co
 
 
