--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -43,5 +43,5 @@ jobs:
               git clone https://github.com/germanAOQ/Seminario-de-seguridad
               cd Seminario-de-seguridad
               heroku git:remote -a seminario-seguridad
-              git push heroku main
+              git push https://github.com/germanAOQ/Seminario-de-seguridad main
 
