--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -34,6 +34,13 @@ jobs:
         run: |
               jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
-                uses: ./.github/workflows/deploy
+                steps:
+                  - uses: actions/checkout@v2
+                  - uses: akhileshns/heroku-deploy@v3.0.0
+                    with:
+                      heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+                      heroku_app_name: "seminario-seguridad"
+                      heroku_email: "german.ospina-q@mail.escuelaing.edu.co"
+                      usedocker: true
               fi
 
