--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -31,16 +31,8 @@ jobs:
       - name: prueba
         run: ls /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad
       - name: comando-y-lectura
-        run: |
-              jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
-              if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"; then 
-                steps:
-                  - uses: actions/checkout@v2
-                  - uses: akhileshns/heroku-deploy@v3.0.0
-                    with:
-                      heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-                      heroku_app_name: "seminario-seguridad"
-                      heroku_email: "german.ospina-q@mail.escuelaing.edu.co"
-                      usedocker: true
-              fi
+        run: jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
+      - name: deploy
+        if: grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"
+        uses: ./.github/workflows/deploy
 
