--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -32,7 +32,9 @@ jobs:
         run: ls /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad
       - name: comando-y-lectura
         run: jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
+        env:
+          condition: grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"
       - name: deploy
-        if: grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt"
+        if: condition
         uses: ./.github/workflows/deploy
 
