--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -32,13 +32,13 @@ jobs:
         run: ls /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad
       - name: comando-y-lectura
         env:
-          condition: ${{ false }}
+          condition: false
         run: |
               jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt" then;
                 $condition = true
               fi
       - name: deploy
-        if: github.condition
+        if: $condition
         uses: ./.github/workflows/deploy
 
