--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
               jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt" then;
-                $condition = true
+                ${{ env.condition }} = true
               fi
       - name: deploy
         if: ${{ env.condition }} == 'true'
