--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -34,9 +34,9 @@ jobs:
         run: |
               jq 'if .site[].alerts[].confidence == "3" then true else empty end' /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/report_json.json > /home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt" then;
-                ${condition} = true
+                failure
               fi
       - name: deploy
-        if: ${{ env.condition }} == 'true'
+        if: succeeded()
         uses: ./.github/workflows/deploy
 
