--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -13,6 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs: 
   # This workflow contains a single job called "build"
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -36,7 +37,8 @@ jobs:
               if grep -q true "/home/runner/work/Seminario-de-seguridad/Seminario-de-seguridad/resp.txt" then;
                 failure
               fi
-      - name: deploy
-        if: succeeded()
+      - name: f
+        if: ${{ failure() }}
         uses: ./.github/workflows/deploy
 
+        
