--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -39,6 +39,6 @@ jobs:
               fi
       - name: f
         if: ${{ failure() }}
-        uses: actions/deploy
+        uses: ./.github/actions/deploy
 
         
