--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -45,5 +45,7 @@ jobs:
       - name: f
         if: ${{ failure() }}
         uses: ./actions/deploy.yml
+        with:
+          branch: main
 
         
